# PrimerID

./: .clang-format  .gitignore  Makefile  Makefile.am  README.md  autogen.sh  configure.ac
scripts/Alignments/: align.sh
scripts/Comparing estimators/: 3223_amplicon.txt  3236_amplicon.txt  HC.sh  prepare.sh
scripts/Comparing estimators/DetermineFreqs/: determineHCfreq.cpp
scripts/Figure 1 - qPCR Efficiency/: Figure1.R  qPCR.csv
scripts/Figure 2 - qPCR Efficiency/: Figure2.R
scripts/Figure 2,S10 - Histograms/: Figure2_S10.R
scripts/Figure 3,S18 - Nucleotide distributions/: Figure3_S18.R
scripts/Figure 3,S9 - Histograms/: Figure3_S9.R
scripts/Figure 4 - Motifs/: Figure4.R
scripts/Figure 4 - Motifs/seqLogo/: AllClasses.R  AllGenerics.R  seqLogo.R
scripts/Figure 4,5 - pID bias/: Figure4_5.R
scripts/Figure 4,S16 - Nucleotide distributions/: Figure4_S16.R
scripts/Figure 5,6 - pID bias/: Figure5_6.R
scripts/Figure S15 - HMM LogLik/: FigureS15.R
scripts/Figure S17 - HMM LogLik/: FigureS17.R
scripts/Figure S18,S19 - Bias and Variance/: PerformTests.m  ReadsFrequencies.xlsx  Variances.m
scripts/Figure S19,S20 - Bias and Variance/: Frequencies (formatted).xlsx  PDF_DATA.m
scripts/Figure S21,S22 - Bias and Variance/: Frequencies (formatted).xlsx  pIDalyse_DATA.m
scripts/PreprocessedData/: preprocess.sh
scripts/RawData/: analyse.sh
scripts/References/: 5VM_3223.fasta  5VM_3223_NO_N_withPrimer.fasta  5VM_3223_N_withPrimer.fasta  5VM_3223_N_withPrimer_cons.fasta  5VM_3223_cons.fasta  5VM_3236.fasta  5VM_3236_NO_N_withPrimer.fasta  5VM_3236_N_withPrimer.fasta  5VM_3236_N_withPrimer_cons.fasta  5VM_3236_cons.fasta  usedPrimers.fasta
scripts/Table S7,S8 - Minimum heterozygous Hamming distances/: Table_S7_S8.R
src/: .clang-format  Makefile  Makefile.am  alignment.cpp  alignment.hpp  kmeans.hpp  main.cpp  pidalign.cpp  prob_cycle.hpp  proper_read.cpp  proper_read.hpp  reference.cpp  reference.hpp  statistics.hpp
src/pidalign/: ednafull.hpp  pidalign.cpp
src/pidalign/threadpool/detail/: future.hpp
src/pidalign/threadpool11/: pool.cpp  worker.cpp
src/pidalyse/: alignment.cpp  alignment.hpp  kmeans.hpp  main.cpp  proper_read.cpp  proper_read.hpp  reference.cpp  reference.hpp  statistics.cpp  statistics.hpp
src/pidrtpcrsim/: pidrtpcrsim.cpp
src/threadpool11/: pool.cpp  worker.cpp
test/: test_dnavector.cpp  test_prob_cycle.cpp
